# asciicity

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/: cloud_tiny.txt  cloud_wispy.txt  plane.txt  plane2.txt  plane3.txt
assets/campfire/: fire.txt  knight.txt  tree_medium.txt  tree_small.txt
assets/cityscape/: bird.txt  car_sedan.txt  car_sports.txt  car_taxi.txt  car_truck.txt  car_van.txt  cloud_flat.txt  cloud_large.txt  cloud_small.txt  cloud_tiny.txt  cloud_wispy.txt  heli.txt  heli2.txt  person_table.txt  plane.txt  plane2.txt  plane3.txt
src/: art.rs  color.rs  effects.rs  engine.rs  entity.rs  layer.rs  main.rs  scene.rs
src/behavior/: daynight.rs  mod.rs  parallax.rs  weather.rs  wind.rs
src/cityscape/: mod.rs
src/scenes/: mod.rs
src/scenes/campfire/: art.rs  mod.rs
src/scenes/cityscape/: art.rs  mod.rs
