[package]
name = "asciicity"
version = "0.1.1"
edition = "2024"
description = "Animated ASCII cityscape screensaver for the terminal: buildings, traffic, planes, weather, and a day/night cycle."
license = "MIT"
repository = "https://github.com/Lorakszak/asciicity"
homepage = "https://github.com/Lorakszak/asciicity"
readme = "README.md"
keywords = ["terminal", "ascii", "animation", "screensaver", "cityscape"]
categories = ["command-line-utilities", "visualization"]
authors = ["Lorakszak"]
exclude = [
    "docs/",
    ".github/",
    ".superpowers/",
    ".claude/",
    "CLAUDE.md",
    "media/",
]

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
clap = { version = "4", features = ["derive"] }
rand = "0.9"
